2007-10-30  Priit Laes  <plaes@svn.gnome.org>

	* et.po: Translation updated by Olle Niit.

2007-10-27  Daniel Nylander <po@danielnylander.se>

	* sv.po: Updated Swedish translation.

2007-10-25  Gil Forcada  <gforcada@svn.gnome.org>

	* ca.po: Updated Catalan translation by Joaquim Perez.

2007-10-22  Djihed Afifi <djihed@gmail.com> 

	* ar.po: Updated Arabic Translation by Djihed Afifi.

2007-10-19  Jorge Gonzalez  <jorgegonz@svn.gnome.org>  

        * es.po: Updated Spanish translation by Francisco Vila

2007-10-18  Priit Laes  <plaes@svn.gnome.org>

	* et.po: Translation updated by Olle Niit.

2007-10-16  Michael Natterer  <mitch@gimp.org>

	* POTFILES.skip: added app/widgets/gimpcolorselectorpalette.c
	Fixes bug #487153.

2007-10-07 Marco Ciampa  <ciampix@libero.it>

	* it.po: updated italian translation.

2007-10-04  Žygimantas Beručka  <zygis@gnome.org>

	* lt.po: Updated Lithuanian translation.

2007-09-30  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* fr.po: Updated French translation by Laurent Monin.

2007-09-29  Adam Weinberger  <adamw@gnome.org>

	* en_CA.po: Updated Canadian English translation.

2007-09-26  Gil Forcada  <gforcada@svn.gnome.org>

	* ca.po: Updated Catalan translation by Joaquim Perez.

2007-09-24  Matic Zgur  <mr.zgur@gmail.com>

	* sl.po: Updated Slovenian translation by Nedeljko Grabant and Martin
	Srebotnjak.

2007-09-24  Ulf-D. Ehlert  <ulfehlert@svn.gnome.org>

	* de.po: Bugfixes in German translation.

2007-09-21  Artur Flinta  <aflinta@svn.gnome.org>

	* pl.po: Updated Polish translation by GNOME PL Team.

2007-09-20  Žygimantas Beručka  <zygis@gnome.org>

	* lt.po: Updated Lithuanian translation.

2007-09-17  Sven Neumann  <sven@gimp.org>

	* km.po: updated Kmer translation (bug #420417).

2007-09-16  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es.po: Updated Spanish translation by Francisco Vila

2007-09-16  Wadim Dziedzic  <wadimd@svn.gnome.org>

	* pl.po: Updated polish translation
